--- a/discovery-server/src/main/resources/application.properties
+++ b/discovery-server/src/main/resources/application.properties
@@ -2,5 +2,8 @@ eureka.instance.hostname=localhost
 eureka.client.register-with-eureka=false
 eureka.client.fetch-registry=false
 
+eureka.username=${EUREKA_USERNAME:eureka}
+eureka.password=${EUREKA_PASSWORD:password}
+
 # default port for eureka
 server.port=8761
