--- a/discovery-server/src/main/resources/application.properties
+++ b/discovery-server/src/main/resources/application.properties
@@ -7,3 +7,6 @@ eureka.password=${EUREKA_PASSWORD:password}
 
 # default port for eureka
 server.port=8761
+
+spring.zipkin.base-url=http://localhost:9411
+spring.sleuth.sampler.probability=1.0
